Crisis Response App/objects/Impact__c.object
<CustomObject>
    <description>A type of impact that is possible in a given crisis. (Example for a hurricane could be &apos;displaced&apos;, &apos;marked safe&apos;, or &apos;medically impacted&apos;)</description>
    <fields>
        <fullName>Crisis__c</fullName>
        <inlineHelpText>The &quot;impact&quot; is a child of the &quot;crisis&quot;. What is the Crisis that this impact is caused by?</inlineHelpText>
        <label>Crisis</label>
        <referenceTo>Crisis__c</referenceTo>
        <relationshipLabel>Impact</relationshipLabel>
        <relationshipName>Impact</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description_of_Impact__c</fullName>
        <description>Describe this impact type in more detail.</description>
        <inlineHelpText>Describe this impact type in more detail.</inlineHelpText>
        <label>Description of Impact</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Impacted__c</fullName>
        <description>Number of people impacted based on number of personal impact records logged.</description>
        <inlineHelpText>Number of people impacted based on number of personal impact records logged.</inlineHelpText>
        <label>Number of People Impacted</label>
        <summaryForeignKey>Impacted_Individual_Junction__c.Impact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Severity_of_Impact__c</fullName>
        <inlineHelpText>How severe is this person impacted?</inlineHelpText>
        <label>Severity of Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>Marked Safe / Not Impacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Impact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Impact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Impact</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>